--- a/user-platform/user-web/pom.xml
+++ b/user-platform/user-web/pom.xml
@@ -74,6 +74,17 @@
             <version>3.0.1-b11</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
