--- a/user-platform/user-web/pom.xml
+++ b/user-platform/user-web/pom.xml
@@ -58,9 +58,10 @@
 
         <!-- Hibernate Validator -->
         <dependency>
-            <groupId>org.hibernate.validator</groupId>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>javax.el</groupId>
@@ -80,10 +81,7 @@
             <artifactId>microprofile-config-api</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.jolokia</groupId>
-            <artifactId>jolokia-core</artifactId>
-        </dependency>
+
 
     </dependencies>
 
