--- a/user-platform/pom.xml
+++ b/user-platform/pom.xml
@@ -17,6 +17,7 @@
         <module>my-dependency-injection</module>
         <module>my-rest-client</module>
         <module>my-reactive-messaging</module>
+        <module>my-cache</module>
     </modules>
 
     <properties>
@@ -48,6 +49,10 @@
         <glassfish-el.version>3.0.1-b08</glassfish-el.version>
         <jackson.version>2.9.5</jackson.version>
         <activemq.version>5.9.1</activemq.version>
+        <javax.cache-api.version>1.1.1</javax.cache-api.version>
+        <lettuce.version>6.1.0.RELEASE</lettuce.version>
+        <jedis.version>3.5.2</jedis.version>
+
 
         <!-- Testing 版本 -->
         <junit.version>4.13</junit.version>
@@ -107,6 +112,13 @@
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
                 <version>${javax.cdi-api.version}</version>
+            </dependency>
+
+            <!-- Java Cache API -->
+            <dependency>
+                <groupId>javax.cache</groupId>
+                <artifactId>cache-api</artifactId>
+                <version>${javax.cache-api.version}</version>
             </dependency>
 
 
@@ -216,6 +228,19 @@
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-all</artifactId>
                 <version>${activemq.version}</version>
+            </dependency>
+
+            <!-- Redis Java Client - Lettuce -->
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
             </dependency>
 
             <!-- Testing Dependencies -->
